--- a/integration-templates/unanet/nango.yaml
+++ b/integration-templates/unanet/nango.yaml
@@ -26,7 +26,7 @@ integrations:
                 description: Retrieve information about a company
             create-company:
                 endpoint: POST /company
-                input: Company
+                input: CreateCompany
                 output: Company
                 description: Create a company in the system
             create-opportunity:
@@ -59,6 +59,9 @@ models:
         id: number
         name: string
         status: string
+    CreateCompany:
+        name: string
+        federalAgency?: FederalAgency
     Company:
         name: string
         externalId: string
