--- a/integration-templates/unanet/nango.yaml
+++ b/integration-templates/unanet/nango.yaml
@@ -3,13 +3,18 @@ integrations:
         actions:
             create-lead:
                 endpoint: POST /lead
-                description: Create a lead with information about the opportunity and company
-                input: Lead
+                description: Create a lead with with information about the
+                    federal agency, the name, due date, posted date, solicitation number,
+                    naics category or categories, the city, state, country, and description.
+                input: CreateLead
                 output: Lead
             update-lead:
                 endpoint: PUT /lead
-                description: Update a lead
+                description: Update a lead with any changed information about the
+                    federal agency, the name, due date, posted date, solicitation number,
+                    naics category or categories, the city, state, country, and description.
                 output: Lead
+                input: UpdateLead
             get-leads:
                 endpoint: GET /leads
                 description: Fetch all leads
@@ -17,7 +22,8 @@ integrations:
             get-schema:
                 endpoint: GET /schema
                 input: Entity
-                description: Get the schema of any entity
+                description: Get the schema of any entity. Useful to know the properties
+                    of any object that exists in the system.
                 output: Schema[]
             get-company:
                 endpoint: GET /company
@@ -33,7 +39,9 @@ integrations:
                 endpoint: POST /opportunity
                 input: Opportunity
                 output: Opportunity
-                description: Create an opportunity in the system
+                description: |
+                    Create an opportunity in the system. Requires a stage that exists
+                    in the system. Use the list-stages action to find the appropriate stage.
             create-contact:
                 endpoint: POST /contact
                 input: Contact
@@ -41,7 +49,9 @@ integrations:
                 description: Create a contact in the system
             list-stages:
                 endpoint: GET /stages
-                description: List all the stages that exist in the system
+                description: |
+                    List all the stages that exist in the system. Use this action to find
+                    the correct stage to be able to create an opportunity.
                 output: Stage
 
 models:
@@ -107,9 +117,25 @@ models:
         emailAddress: string
         phone: string
         fax: string
+    BaseLead:
+        federalAgency: FederalAgency
+        name: string
+        dueDate: string
+        postedDate: string
+        solicitationNumber: string
+        naicsCategory: string | string[]
+        city: string
+        state: string
+        country: string
+        description: string
+    CreateLead:
+        __extends: BaseLead
+    UpdateLead:
+        __extends: BaseLead
+        id: string
     Lead:
-        __extends: Timestamps
-        id?: string
+        __extends: BaseLead,Timestamps
+        id: string
         federalAgency: FederalAgency
         name: string
         dueDate: string
