[nan-1328] add xero templates

--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -3328,6 +3328,278 @@ integrations:
             Attachment:
                 name: string
                 data: string
+    xero:
+        syncs:
+            xero-contacts-sync:
+                description: |
+                    Fetches all Xero contacts.
+                    Details: incremental sync, detects deletes, metadata is not required.
+                runs: every hour
+                output: Contact
+                sync_type: incremental
+                auto_start: false
+                endpoint: GET /xero/contacts
+            xero-accounts-sync:
+                description: >
+                    Fetches all accounts in Xero (chart of accounts). Incremental sync,
+                    detects deletes, metadata is not required.
+                runs: every hour
+                scopes: account.settings
+                output: Account
+                sync_type: incremental
+                auto_start: false
+                endpoint: GET /xero/accounts
+            xero-items-sync:
+                description: >
+                    Fetches all items in Xero. Incremental sync, does not detect deletes,
+                    metadata is not
+
+                    required.
+                runs: every hour
+                scopes: account.settings
+                output: Item
+                sync_type: incremental
+                auto_start: false
+                endpoint: GET /xero/items
+        actions:
+            xero-create-contact:
+                description: |
+                    Creates one or multiple contacts in Xero.
+                    Note: Does NOT check if these contacts already exist.
+                input: Contact[]
+                scopes: accounting.contacts
+                output: ContactActionResponse
+                endpoint: POST /xero/contacts
+            xero-update-contact:
+                description: >
+                    Updates one or multiple contacts in Xero. Only fields that are passed
+                    in are modified. If a field should not be changed, omit it in the
+                    input. The id field is mandatory.
+                input: Contact[]
+                scopes: accounting.contacts
+                output: ContactActionResponse
+                endpoint: PUT /xero/contacts
+            xero-create-invoice:
+                description: |
+                    Creates one or more invoices in Xero.
+                    Note: Does NOT check if the invoice already exists.
+                input: Invoice[]
+                scopes: accounting.transactions
+                output: InvoiceActionResponse
+                endpoint: POST /xero/invoices
+            xero-update-invoice:
+                description: |
+                    Updates one or more invoices in Xero.
+                input: Invoice[]
+                scopes: accounting.transactions
+                output: InvoiceActionResponse
+                endpoint: PUT /xero/invoices
+            xero-create-credit-note:
+                description: |
+                    Creates one or more credit notes in Xero.
+                    Note: Does NOT check if the credit note already exists.
+                input: CreditNote[]
+                scopes: accounting.transactions
+                output: CreditNoteActionResponse
+                endpoint: POST /xero/creditnotes
+            xero-update-credit-note:
+                description: |
+                    Updates one or more credit notes in Xero.
+                input: CreditNote[]
+                scopes: accounting.transactions
+                output: CreditNoteActionResponse
+                endpoint: PUT /xero/creditnotes
+            xero-create-payment:
+                description: |
+                    Creates one or more payments in Xero.
+                    Note: Does NOT check if the payment already exists.
+                scopes: accounting.transactions
+                input: Payment[]
+                output: PaymentActionResponse
+                endpoint: POST /xero/payments
+            xero-create-item:
+                description: |
+                    Creates one or more items in Xero.
+                    Note: Does NOT check if the item already exists.
+                scopes: accounting.settings
+                input: Item[]
+                output: ItemActionResponse
+                endpoint: POST /xero/items
+            xero-update-item:
+                description: |
+                    Updates one or more items in Xero.
+                scopes: accounting.settings
+                input: Item[]
+                output: ItemActionResponse
+                endpoint: PUT /xero/items
+        models:
+            ActionErrorResponse:
+                message: string
+            Contact:
+                id: string
+                name: string
+                external_id: string
+                email: string | null
+                tax_number: string | null
+                address_line_1: string | null
+                address_line_2: string | null
+                city: string | null
+                zip: string | null
+                country: string | null
+                state: string | null
+                phone: string | null
+                subsidiary: string | null
+            FailedContact:
+                id: string
+                name: string
+                external_id: string
+                email: string | null
+                tax_number: string | null
+                address_line_1: string | null
+                address_line_2: string | null
+                city: string | null
+                zip: string | null
+                country: string | null
+                state: string | null
+                phone: string | null
+                subsidiary: string | null
+                validation_errors: any[]
+            ContactActionResponse:
+                succeededContacts: Contact[]
+                failedContacts: FailedContact[]
+            Account:
+                id: string
+                code: string
+                name: string
+                type: string
+                tax_type: string
+                description: string | null
+                class: string
+                bank_account_type: string
+                reporting_code: string
+                reporting_code_name: string
+            Item:
+                id: string
+                item_code: string | null
+                name: string
+                description: string | null
+                account_code: string | null
+            FailedItem:
+                id: string
+                item_code: string | null
+                name: string
+                description: string | null
+                account_code: string | null
+                validation_errors: any[]
+            ItemActionResponse:
+                succeededItems: Item[]
+                failedItems: FailedItem[]
+            Payment:
+                id: string
+                status: string
+                external_contact_id: string | null
+                invoice_id: string | null
+                credit_note_id: string | null
+                account_code: string
+                date: date
+                amount_cents: number
+            FailedPayment:
+                id: string
+                status: string
+                external_contact_id: string | null
+                invoice_id: string | null
+                credit_note_id: string | null
+                account_code: string
+                date: date
+                amount_cents: number
+                validation_errors: any[]
+            PaymentActionResponse:
+                succeededPayment: Payment[]
+                failedPayments: FailedPayment[]
+            Invoice:
+                id: string
+                type: string
+                external_contact_id: string
+                issuing_date: date
+                payment_due_date: date | null
+                status: string
+                number: string
+                is_taxable: boolean
+                tax_rate_id: string
+                tax_rate: number
+                currency: string
+                purchase_order: string | null
+                fees: InvoiceFee[]
+            InvoiceFee:
+                item_id: string
+                item_code: string | null
+                description: string | null
+                units: number
+                precise_unit_amount: number | null
+                account_code: string
+                account_external_id: string | null
+                amount_cents: number | null
+                taxes_amount_cents: number | null
+                rate: number | null
+                price: number | null
+            FailedInvoice:
+                id: string
+                type: string
+                external_contact_id: string
+                issuing_date: date
+                payment_due_date: date | null
+                status: string
+                number: string
+                is_taxable: boolean
+                tax_rate_id: string
+                tax_rate: number
+                currency: string
+                purchase_order: string | null
+                fees: InvoiceFee[]
+                validation_errors: any[]
+            InvoiceActionResponse:
+                succeededInvoices: Invoice[]
+                failedInvoices: FailedInvoice[]
+            CreditNote:
+                id: string
+                type: string
+                external_contact_id: string
+                status: string
+                number: string
+                is_taxable: boolean
+                tax_rate_id: string
+                tax_rate: number
+                currency: string
+                reference: string
+                issuing_date: date
+                fees: CreditNoteFee[]
+            CreditNoteFee:
+                item_id: string
+                item_code: string
+                description: string
+                units: number
+                precise_unit_amount: number
+                account_code: string
+                account_external_id: string
+                amount_cents: number
+                taxes_amount_cents: number
+            FailedCreditNote:
+                id: string
+                type: string
+                external_contact_id: string
+                status: string
+                number: string
+                is_taxable: boolean
+                tax_rate_id: string
+                tax_rate: number
+                currency: string
+                reference: string
+                issuing_date: date
+                fees: CreditNoteFee[]
+                validation_errors: any[]
+            CreditNoteActionResponse:
+                succeededCreditNotes: CreditNote[]
+                failedCreditNotes: FailedCreditNote[]
     zendesk:
         syncs:
             tickets:
