[nan-1327] add response_path

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -418,6 +418,7 @@ certn:
         paginate:
             type: link
             link_path_in_response_body: next
+            response_path: results
         verification:
             method: GET
             endpoint: /api/v2/teams
