[nan-1168] update xero

--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -3382,7 +3382,7 @@ integrations:
                 data: string
     xero:
         syncs:
-            xero-contacts-sync:
+            contacts:
                 description: |
                     Fetches all Xero contacts.
                     Details: incremental sync, detects deletes, metadata is not required.
@@ -3391,38 +3391,56 @@ integrations:
                 sync_type: incremental
                 auto_start: false
                 endpoint: GET /xero/contacts
-            xero-accounts-sync:
+            accounts:
                 description: >
                     Fetches all accounts in Xero (chart of accounts). Incremental sync,
                     detects deletes, metadata is not required.
                 runs: every hour
-                scopes: account.settings
+                scopes: accounting.settings
                 output: Account
                 sync_type: incremental
                 auto_start: false
                 endpoint: GET /xero/accounts
-            xero-items-sync:
+            items:
                 description: >
                     Fetches all items in Xero. Incremental sync, does not detect deletes,
                     metadata is not
 
                     required.
                 runs: every hour
-                scopes: account.settings
+                scopes: accounting.settings
                 output: Item
                 sync_type: incremental
                 auto_start: false
                 endpoint: GET /xero/items
+            invoices:
+                description: |
+                    Fetches all invoices in Xero. Incremental sync.
+                runs: every hour
+                scopes: accounting.transactions
+                output: Invoice
+                sync_type: incremental
+                auto_start: false
+                endpoint: GET /xero/invoices
+            payments:
+                description: |
+                    Fetches all payments in Xero. Incremental sync.
+                runs: every hour
+                scopes: accounting.transactions
+                output: Payment
+                sync_type: incremental
+                auto_start: false
+                endpoint: GET /xero/payments
         actions:
-            xero-create-contact:
+            create-contact:
                 description: |
                     Creates one or multiple contacts in Xero.
                     Note: Does NOT check if these contacts already exist.
-                input: Contact[]
+                input: CreateContact[]
                 scopes: accounting.contacts
                 output: ContactActionResponse
                 endpoint: POST /xero/contacts
-            xero-update-contact:
+            update-contact:
                 description: >
                     Updates one or multiple contacts in Xero. Only fields that are passed
                     in are modified. If a field should not be changed, omit it in the
@@ -3431,22 +3449,25 @@ integrations:
                 scopes: accounting.contacts
                 output: ContactActionResponse
                 endpoint: PUT /xero/contacts
-            xero-create-invoice:
+            create-invoice:
                 description: |
                     Creates one or more invoices in Xero.
                     Note: Does NOT check if the invoice already exists.
-                input: Invoice[]
+                input: CreateInvoice[]
                 scopes: accounting.transactions
                 output: InvoiceActionResponse
                 endpoint: POST /xero/invoices
-            xero-update-invoice:
+            update-invoice:
                 description: |
-                    Updates one or more invoices in Xero.
+                    Updates one or more invoices in Xero. To delete an invoice
+                    that is in DRAFT or SUBMITTED set the status to DELETED. If an
+                    invoice has been AUTHORISED it can't be deleted but you can set
+                    the status to VOIDED.
                 input: Invoice[]
                 scopes: accounting.transactions
                 output: InvoiceActionResponse
                 endpoint: PUT /xero/invoices
-            xero-create-credit-note:
+            create-credit-note:
                 description: |
                     Creates one or more credit notes in Xero.
                     Note: Does NOT check if the credit note already exists.
@@ -3454,22 +3475,22 @@ integrations:
                 scopes: accounting.transactions
                 output: CreditNoteActionResponse
                 endpoint: POST /xero/creditnotes
-            xero-update-credit-note:
+            update-credit-note:
                 description: |
                     Updates one or more credit notes in Xero.
                 input: CreditNote[]
                 scopes: accounting.transactions
                 output: CreditNoteActionResponse
                 endpoint: PUT /xero/creditnotes
-            xero-create-payment:
+            create-payment:
                 description: |
                     Creates one or more payments in Xero.
                     Note: Does NOT check if the payment already exists.
                 scopes: accounting.transactions
-                input: Payment[]
+                input: CreatePayment[]
                 output: PaymentActionResponse
                 endpoint: POST /xero/payments
-            xero-create-item:
+            create-item:
                 description: |
                     Creates one or more items in Xero.
                     Note: Does NOT check if the item already exists.
@@ -3477,7 +3498,7 @@ integrations:
                 input: Item[]
                 output: ItemActionResponse
                 endpoint: POST /xero/items
-            xero-update-item:
+            update-item:
                 description: |
                     Updates one or more items in Xero.
                 scopes: accounting.settings
@@ -3487,41 +3508,55 @@ integrations:
         models:
             ActionErrorResponse:
                 message: string
+            BaseContact:
+                name: string
+            CreateContact:
+                name: string
+                external_id?: string
+                email?: string
+                tax_number?: string
+                address_line_1?: string
+                address_line_2?: string
+                city?: string
+                zip?: string
+                country?: string
+                state?: string
+                phone?: string
             Contact:
-                id: string
                 name: string
-                external_id: string
+                id: string
+                external_id?: string
                 email: string | null
-                tax_number: string | null
-                address_line_1: string | null
-                address_line_2: string | null
+                tax_number?: string | null
+                address_line_1?: string | null
+                address_line_2?: string | null
                 city: string | null
                 zip: string | null
                 country: string | null
                 state: string | null
                 phone: string | null
-                subsidiary: string | null
+                subsidiary?: string | null
             FailedContact:
-                id: string
                 name: string
-                external_id: string
+                id: string
+                external_id?: string
                 email: string | null
-                tax_number: string | null
-                address_line_1: string | null
-                address_line_2: string | null
+                tax_number?: string | null
+                address_line_1?: string | null
+                address_line_2?: string | null
                 city: string | null
                 zip: string | null
                 country: string | null
                 state: string | null
                 phone: string | null
-                subsidiary: string | null
+                subsidiary?: string | null
                 validation_errors: any[]
             ContactActionResponse:
                 succeededContacts: Contact[]
                 failedContacts: FailedContact[]
             Account:
                 id: string
-                code: string
+                code?: string
                 name: string
                 type: string
                 tax_type: string
@@ -3546,65 +3581,106 @@ integrations:
             ItemActionResponse:
                 succeededItems: Item[]
                 failedItems: FailedItem[]
+            BasePayment:
+                date: string | null
+                amount_cents: number
+                external_contact_id?: string
+                account_code?: string
+                account_id?: string
+            CreatePayment:
+                date: string | null
+                amount_cents: number
+                external_contact_id?: string
+                account_code?: string
+                account_id?: string
+                status?: string
+                invoice_id?: string
+                credit_note_id?: string
             Payment:
+                date: string | null
+                amount_cents: number
+                external_contact_id?: string
+                account_code?: string
+                account_id?: string
                 id: string
                 status: string
-                external_contact_id: string | null
                 invoice_id: string | null
                 credit_note_id: string | null
-                account_code: string
-                date: date
-                amount_cents: number
             FailedPayment:
+                date: string | null
+                amount_cents: number
+                external_contact_id?: string
+                account_code?: string
+                account_id?: string
                 id: string
                 status: string
-                external_contact_id: string | null
                 invoice_id: string | null
                 credit_note_id: string | null
-                account_code: string
-                date: date
-                amount_cents: number
                 validation_errors: any[]
+            IdEntity:
+                id: string
+            StatusOutput:
+                status: string
             PaymentActionResponse:
                 succeededPayment: Payment[]
                 failedPayments: FailedPayment[]
-            Invoice:
-                id: string
-                type: string
+            BaseInvoice:
+                type: ACCPAY | ACCREC
                 external_contact_id: string
-                issuing_date: date
-                payment_due_date: date | null
+            CreateInvoice:
+                type: ACCPAY | ACCREC
+                external_contact_id: string
+                fees: CreateInvoiceFee[]
+                issuing_date?: date
+                payment_due_date?: date | null
+                status?: string
+                number?: string
+                tax_rate?: number
+                currency?: string
+                purchase_order?: string | null
+            CreateInvoiceFee:
+                description: string
+                item_id?: string
+                item_code?: string | null
+                units?: number
+                precise_unit_amount?: number | null
+                account_code?: string
+                account_external_id?: string | null
+                amount_cents?: number | null
+                taxes_amount_cents?: number | null
+                rate?: number | null
+                price?: number | null
+            Invoice:
+                type: ACCPAY | ACCREC
+                external_contact_id: string
+                id: string
+                issuing_date: string | null
+                payment_due_date: string | null
                 status: string
-                number: string
-                is_taxable: boolean
-                tax_rate_id: string
-                tax_rate: number
+                number?: string
                 currency: string
                 purchase_order: string | null
                 fees: InvoiceFee[]
             InvoiceFee:
                 item_id: string
-                item_code: string | null
+                item_code?: string | null
                 description: string | null
-                units: number
+                units: number | null
                 precise_unit_amount: number | null
-                account_code: string
-                account_external_id: string | null
+                account_code?: string
+                account_external_id?: string | null
                 amount_cents: number | null
                 taxes_amount_cents: number | null
-                rate: number | null
-                price: number | null
+                rate?: number | null
+                price?: number | null
             FailedInvoice:
-                id: string
-                type: string
+                type: ACCPAY | ACCREC
                 external_contact_id: string
-                issuing_date: date
-                payment_due_date: date | null
+                id: string
+                issuing_date: string | null
+                payment_due_date: string | null
                 status: string
-                number: string
-                is_taxable: boolean
-                tax_rate_id: string
-                tax_rate: number
+                number?: string
                 currency: string
                 purchase_order: string | null
                 fees: InvoiceFee[]
