--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1417,6 +1417,33 @@ klaviyo:
         base_url: https://a.klaviyo.com
         headers:
             Authorization: Klaviyo-API-Key ${apiKey}
+            revision: ${connectionConfig.revisionHeader}
+        verification:
+            method: GET
+            endpoint: /api/accounts
+        retry:
+            after: 'Retry-After'
+    docs: https://docs.nango.dev/integrations/all/klaviyo
+klaviyo-OAuth:
+    categories:
+        - marketing
+    auth_mode: OAUTH2
+    authorization_url: https://www.klaviyo.com/oauth/authorize
+    token_url: https://a.klaviyo.com/oauth/token
+    token_request_auth_method: basic
+    scope_separator: ' '
+    authorization_params:
+        response_type: code
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    proxy:
+        base_url: https://a.klaviyo.com
+        headers:
+            revision: ${connectionConfig.revisionHeader}
+        retry:
+            after: 'Retry-After'
     docs: https://docs.nango.dev/integrations/all/klaviyo
 kustomer:
     categories:
