[nan-1343] allow integration templates to be run from the repo

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ nango-integrations/*
 dist/
 tsconfig.tsbuildinfo
 node_modules
+integration-templates/**/schema.json
+integration-templates/**/schema.ts
+integration-templates/**/models.ts
