[nan-1343] logic tweaks

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,6 @@ nango-integrations/*
 dist/
 tsconfig.tsbuildinfo
 node_modules
-integration-templates/**/schema.json
+integration-templates/**/.nango
 integration-templates/**/schema.ts
 integration-templates/**/models.ts
