feat(internal-integration-templates): [nan-1343] allow integration templates to be run from the repo (#2473)
## Describe your changes
Makes for an easier workflow to be able to run and test integration
templates directly from the repo instead of making another directory and
then copying and pasting the files back and forth.

So a command would look like this:

```
bash scripts/run-integration-template.bash asana dryrun ${sync|action} ${connection_id}
```

## Issue ticket number and link
NAN-1343

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [ ] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ nango-integrations/*
 dist/
 tsconfig.tsbuildinfo
 node_modules
+integration-templates/**/.nango
+integration-templates/**/schema.ts
+integration-templates/**/models.ts
+temp
